feat(switchover): added support for planned switchover via control plane API (#131)
* feat(switchover): added support for planned switchover via control plane API

* Addressing review comments and adding e2e tests

* Addressing failed tests
