# api/apiv1/gen/control_plane/endpoints.go
@@ -15,57 +15,59 @@ import (
 
 // Endpoints wraps the "control-plane" service endpoints.
 type Endpoints struct {
-	InitCluster        goa.Endpoint
-	JoinCluster        goa.Endpoint
-	GetJoinToken       goa.Endpoint
-	GetJoinOptions     goa.Endpoint
-	GetCluster         goa.Endpoint
-	ListHosts          goa.Endpoint
-	GetHost            goa.Endpoint
-	RemoveHost         goa.Endpoint
-	ListDatabases      goa.Endpoint
-	CreateDatabase     goa.Endpoint
-	GetDatabase        goa.Endpoint
-	UpdateDatabase     goa.Endpoint
-	DeleteDatabase     goa.Endpoint
-	BackupDatabaseNode goa.Endpoint
-	ListDatabaseTasks  goa.Endpoint
-	GetDatabaseTask    goa.Endpoint
-	GetDatabaseTaskLog goa.Endpoint
-	RestoreDatabase    goa.Endpoint
-	GetVersion         goa.Endpoint
-	RestartInstance    goa.Endpoint
-	StopInstance       goa.Endpoint
-	StartInstance      goa.Endpoint
-	CancelDatabaseTask goa.Endpoint
+	InitCluster            goa.Endpoint
+	JoinCluster            goa.Endpoint
+	GetJoinToken           goa.Endpoint
+	GetJoinOptions         goa.Endpoint
+	GetCluster             goa.Endpoint
+	ListHosts              goa.Endpoint
+	GetHost                goa.Endpoint
+	RemoveHost             goa.Endpoint
+	ListDatabases          goa.Endpoint
+	CreateDatabase         goa.Endpoint
+	GetDatabase            goa.Endpoint
+	UpdateDatabase         goa.Endpoint
+	DeleteDatabase         goa.Endpoint
+	BackupDatabaseNode     goa.Endpoint
+	SwitchoverDatabaseNode goa.Endpoint
+	ListDatabaseTasks      goa.Endpoint
+	GetDatabaseTask        goa.Endpoint
+	GetDatabaseTaskLog     goa.Endpoint
+	RestoreDatabase        goa.Endpoint
+	GetVersion             goa.Endpoint
+	RestartInstance        goa.Endpoint
+	StopInstance           goa.Endpoint
+	StartInstance          goa.Endpoint
+	CancelDatabaseTask     goa.Endpoint
 }
 
 // NewEndpoints wraps the methods of the "control-plane" service with endpoints.
 func NewEndpoints(s Service) *Endpoints {
 	return &Endpoints{
-		InitCluster:        NewInitClusterEndpoint(s),
-		JoinCluster:        NewJoinClusterEndpoint(s),
-		GetJoinToken:       NewGetJoinTokenEndpoint(s),
-		GetJoinOptions:     NewGetJoinOptionsEndpoint(s),
-		GetCluster:         NewGetClusterEndpoint(s),
-		ListHosts:          NewListHostsEndpoint(s),
-		GetHost:            NewGetHostEndpoint(s),
-		RemoveHost:         NewRemoveHostEndpoint(s),
-		ListDatabases:      NewListDatabasesEndpoint(s),
-		CreateDatabase:     NewCreateDatabaseEndpoint(s),
-		GetDatabase:        NewGetDatabaseEndpoint(s),
-		UpdateDatabase:     NewUpdateDatabaseEndpoint(s),
-		DeleteDatabase:     NewDeleteDatabaseEndpoint(s),
-		BackupDatabaseNode: NewBackupDatabaseNodeEndpoint(s),
-		ListDatabaseTasks:  NewListDatabaseTasksEndpoint(s),
-		GetDatabaseTask:    NewGetDatabaseTaskEndpoint(s),
-		GetDatabaseTaskLog: NewGetDatabaseTaskLogEndpoint(s),
-		RestoreDatabase:    NewRestoreDatabaseEndpoint(s),
-		GetVersion:         NewGetVersionEndpoint(s),
-		RestartInstance:    NewRestartInstanceEndpoint(s),
-		StopInstance:       NewStopInstanceEndpoint(s),
-		StartInstance:      NewStartInstanceEndpoint(s),
-		CancelDatabaseTask: NewCancelDatabaseTaskEndpoint(s),
+		InitCluster:            NewInitClusterEndpoint(s),
+		JoinCluster:            NewJoinClusterEndpoint(s),
+		GetJoinToken:           NewGetJoinTokenEndpoint(s),
+		GetJoinOptions:         NewGetJoinOptionsEndpoint(s),
+		GetCluster:             NewGetClusterEndpoint(s),
+		ListHosts:              NewListHostsEndpoint(s),
+		GetHost:                NewGetHostEndpoint(s),
+		RemoveHost:             NewRemoveHostEndpoint(s),
+		ListDatabases:          NewListDatabasesEndpoint(s),
+		CreateDatabase:         NewCreateDatabaseEndpoint(s),
+		GetDatabase:            NewGetDatabaseEndpoint(s),
+		UpdateDatabase:         NewUpdateDatabaseEndpoint(s),
+		DeleteDatabase:         NewDeleteDatabaseEndpoint(s),
+		BackupDatabaseNode:     NewBackupDatabaseNodeEndpoint(s),
+		SwitchoverDatabaseNode: NewSwitchoverDatabaseNodeEndpoint(s),
+		ListDatabaseTasks:      NewListDatabaseTasksEndpoint(s),
+		GetDatabaseTask:        NewGetDatabaseTaskEndpoint(s),
+		GetDatabaseTaskLog:     NewGetDatabaseTaskLogEndpoint(s),
+		RestoreDatabase:        NewRestoreDatabaseEndpoint(s),
+		GetVersion:             NewGetVersionEndpoint(s),
+		RestartInstance:        NewRestartInstanceEndpoint(s),
+		StopInstance:           NewStopInstanceEndpoint(s),
+		StartInstance:          NewStartInstanceEndpoint(s),
+		CancelDatabaseTask:     NewCancelDatabaseTaskEndpoint(s),
 	}
 }
 
@@ -86,6 +88,7 @@ func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
 	e.UpdateDatabase = m(e.UpdateDatabase)
 	e.DeleteDatabase = m(e.DeleteDatabase)
 	e.BackupDatabaseNode = m(e.BackupDatabaseNode)
+	e.SwitchoverDatabaseNode = m(e.SwitchoverDatabaseNode)
 	e.ListDatabaseTasks = m(e.ListDatabaseTasks)
 	e.GetDatabaseTask = m(e.GetDatabaseTask)
 	e.GetDatabaseTaskLog = m(e.GetDatabaseTaskLog)
@@ -225,6 +228,15 @@ func NewBackupDatabaseNodeEndpoint(s Service) goa.Endpoint {
 	return func(ctx context.Context, req any) (any, error) {
 		p := req.(*BackupDatabaseNodePayload)
 		return s.BackupDatabaseNode(ctx, p)
+	}
+}
+
+// NewSwitchoverDatabaseNodeEndpoint returns an endpoint function that calls
+// the method "switchover-database-node" of service "control-plane".
+func NewSwitchoverDatabaseNodeEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req any) (any, error) {
+		p := req.(*SwitchoverDatabaseNodePayload)
+		return s.SwitchoverDatabaseNode(ctx, p)
 	}
 }
 
